# tracking_robots

./: README.md
show_track_path/: CMakeLists.txt  package.xml
show_track_path/include/show_track_path/: track_path.h
show_track_path/launch/: show_track_path.launch
show_track_path/src/: show_track_path_node.cpp  track_path.cpp
test_trigger/: test_trigger.ino
tracking_robots/track_robot/: CMakeLists.txt  package.xml
tracking_robots/track_robot/include/track_robot/: track_robot.h
tracking_robots/track_robot/launch/: track_robot.launch
tracking_robots/track_robot/src/: track_robot.cpp  track_robot_node.cpp
tracking_robots/track_robot_msgs/: CMakeLists.txt  package.xml
tracking_robots/track_robot_msgs/msg/: Trigger.msg
tracking_robots/tracking_robots/: CMakeLists.txt  package.xml  package.xml.save
